External-Services-for-B2C-Commerce/force-app/main/default/objects/B2C_Potential_Match__c/B2C_Potential_Match__c.object-meta.xml
<CustomObject>
    <label>B2C Potential Match</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C Potential Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>