External-Services-for-B2C-Commerce/force-app/main/default/objects/B2C_Potential_Match__c/fields/B2C_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_No__c</fullName>
    <externalId>true</externalId>
    <label>B2C Customer No</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>