External-Services-for-B2C-Commerce/force-app/main/default/objects/B2C_Potential_Match__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2C Potential Matches</relationshipLabel>
    <relationshipName>B2C_Potential_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>